# Description:
#   j2objc: a Java to iOS Objective-C translator and runtime.
#   https://developers.google.com/j2objc/

package(
    default_applicable_licenses = ["//:LICENSE"],
    default_visibility = ["//:internal_visibility"],
)

exports_files(["LICENSE"])

package_group(
    name = "internal_visibility",
    packages = [
        "//...",
    ],
)
