# examples/Contacts/MODULE.bazel

module(name = "j2objc-contacts-example")

bazel_dep(name = "rules_apple", version = "4.1.2")
bazel_dep(name = "rules_swift", version = "3.1.2")
bazel_dep(name = "apple_support", version = "1.22.1")

# The j2objc module is the main module containing the j2objc_library rule.
# Instead of being on the Bazel Central Registry (BCR), we are developing it
# locally, so we override its path to point to the root of the j2objc repo.
bazel_dep(name = "j2objc", version = "0.0.0")
local_path_override(
    module_name = "j2objc",
    path = "../../", # Assuming this MODULE.bazel is in examples/Contacts
)
