# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

# examples/Hello/MODULE.bazel

module(name = "j2objc-contacts-example")

bazel_dep(name = "bazel_skylib", version = "1.7.1")
bazel_dep(name = "rules_apple", version = "4.1.2")
bazel_dep(name = "apple_support", version = "1.22.1")

# The j2objc module is the main module containing the j2objc_library rule.
# Instead of being on the Bazel Central Registry (BCR), we are developing it
# locally, so we override its path to point to the root of the j2objc repo.
bazel_dep(name = "j2objc", version = "0.0.0")
local_path_override(
    module_name = "j2objc",
    path = "../../", # Assuming this MODULE.bazel is in examples/Contacts
)
